# S7-Server-Iso-on-tcp

./: .dockerignore  .gitignore  BUILD_STATUS.md  BUILD_UBUNTU.md  CMakeLists.txt  CONTRIBUTING.md  CSV_CONFIGURATION_GUIDE.md  DOCKER_SUMMARY.md  DYNAMIC_VALUE_UPDATE_EXAMPLE.md  DYNAMIC_VALUE_UPDATE_TEST_PLAN.md  FIX_DLL_COPY.md  FIX_PERMISSION_DENIED.md  FORMATTING_FIXES.md  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  QUICKSTART_UBUNTU.md  README.md  RELEASE_NOTES.md  RunTest.bat  S7Server.sln  SECURITY.md  UBUNTU_IMPLEMENTATION.md  build_ubuntu.sh  check_port_102.ps1  docker-compose.yml  dresse.csv  setup_snap7.bat  setup_snap7.ps1  setup_snap7_linux.sh  start-environment.ps1  stop-environment.ps1
.github/: copilot-instructions.md
S7Client/: README.md  S7Client.vcxproj  S7Client.vcxproj.filters  main.cpp
S7Server/: APIEndpoints.cpp  APIEndpoints.h  HexFormatter.cpp  HexFormatter.h  HttpServer.cpp  HttpServer.h  MemoryAccessor.cpp  MemoryAccessor.h  S7Server.vcxproj  TagValueCodec.cpp  TagValueCodec.h  WebUIContent.cpp  WebUIContent.h  address.csv  addressSimple.csv  main.cpp
doc/: ACTUAL_SOLUTION_BATCHING_ISSUE.md  BUILD_UBUNTU.md  CLIENT_TEST_QUICKSTART.md  COMPLETE_GUIDE.md  DB101_UPDATE_NOTES.md  DOCKER_QUICKREF.md  DOCKER_SETUP.md  FIND_PORT_102_USER.md  MAXVARS_LIMIT_DISCOVERY.md  NODE_RED_20_VARIABLE_LIMIT.md  PDU_SIZE_EXPLAINED.md  PDU_UPDATE_SUMMARY.md  QUICKSTART_UBUNTU.md  S7CLIENT_PROJECT_SUMMARY.md  UBUNTU_IMPLEMENTATION.md
